# rusty_hyrule_compendium

./: Cargo.toml  LICENSE  README.md
src/: blocking.rs  domain.rs  error.rs  lib.rs  result.rs
src/blocking/: compendium.rs
src/domain/: inputs.rs  models.rs  responses.rs
src/domain/models/: common_entry.rs  creature_entry.rs  equipment_entry.rs  material_entry.rs  monster_entry.rs  treasure_entry.rs
