[package]
name = "rusty_hyrule_compendium"
version = "0.1.0"
description = "A library wrapping https://gadhagod.github.io/Hyrule-Compendium-API/#/"
repository = "https://github.com/Alastair-smith2/rusty_hyrule_compendium"
edition = "2021"
authors = ["Alastair Smith"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
mockito = "0.31.0"