[package]
name = "rusty_hyrule_compendium"
version = "0.1.1"
description = "A rust library for the Hyrule Compendium API"
repository = "https://github.com/Alastair-smith2/rusty_hyrule_compendium"
edition = "2021"
documentation = "https://docs.rs/rusty_hyrule_compendium"
authors = ["Alastair Smith"]
readme = "README.md"
keywords = ["zelda", "http", "api"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
mockito = "0.31.0"